--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,17 @@
 {
     "compilerOptions": {
+        "suppressImplicitAnyIndexErrors": true,
+        "experimentalDecorators": true,
+        "noImplicitAny": true,
         "declaration": true,
         "noResolve": false,
         "module": "commonjs",
         "target": "es5",
-        "experimentalDecorators": true,
-        "noImplicitAny": true,
-        "noImplicitThis": true,
-        "strictNullChecks": true,
-        "suppressImplicitAnyIndexErrors":  true,
         "outDir": "dist/"
     },
 
-    "filesGlob": [
-        "src/**/*{ts,tsx}"
+    "include": [
+        "src/**/*"
     ],
 
     "exclude": [
