--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build:cjs": "tsc -p tsconfig/cjs.json",
     "build": "run-s clean lint build:*",
     "prepare": "npm run build",
-    "lint": "eslint --config .eslintrc src/*.ts spec/*.ts",
+    "lint": "eslint --config .eslintrc --ext .ts src spec",
     "lint:fix": "npm run lint -- --fix",
     "test": "ts-node -P ./tsconfig/cjs.json ./node_modules/.bin/jasmine --config=spec/support/jasmine.json"
   },
@@ -36,14 +36,14 @@
     "url": "git+https://github.com/Microsoft/SubscribableEvent.git"
   },
   "devDependencies": {
-    "@types/jasmine": "3.3.14",
-    "@typescript-eslint/eslint-plugin": "1.12.0",
-    "@typescript-eslint/parser": "1.12.0",
-    "eslint": "6.0.1",
-    "eslint-config-skype": "0.2.0",
+    "@types/jasmine": "3.4.0",
+    "@typescript-eslint/eslint-plugin": "2.0.0",
+    "@typescript-eslint/parser": "2.0.0",
+    "eslint": "6.1.0",
+    "eslint-config-skype": "0.4.0",
     "jasmine": "3.4.0",
     "npm-run-all": "4.1.5",
-    "rimraf": "2.6.3",
+    "rimraf": "3.0.0",
     "ts-node": "8.3.0",
     "typescript": "3.5.3"
   },
